--- a/index.html
+++ b/index.html
@@ -14,6 +14,202 @@
 
 <body>
 
+    <header class="container">
+        <nav class=" navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+
+                <a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Backpack</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+        <!-- slide s -->
+        <section>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active bg-info border rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center justify-content-center  ">
+                                <div class="container">
+                                    <h1>Cool Dude Headphone</h1>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world.</p>
+                                    <h1>$400</h1>
+                                    <div class="btn btn-warning"> Buy Now</div>
+
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item  bg-info border rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center justify-content-center  ">
+                                <div class="container">
+                                    <h1>Mega LCD TV For Sports
+                                    </h1>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world.</p>
+                                    <h1>$1200</h1>
+                                    <div class="btn btn-warning"> Buy Now</div>
+
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item  bg-info border rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center justify-content-center  ">
+                                <div class="container">
+                                    <h1>X-Box for your living room
+                                    </h1>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world.</p>
+                                    <h1>$600</h1>
+                                    <div class="btn btn-warning"> Buy Now</div>
+
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slide ends -->
+    </header>
+    <main>
+        <!-- catagory1 -->
+        <section>
+            <div class="container my-5">
+                <div class="row g-2">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div
+                            class="p-3  border rounded-3 bg-warning d-flex align-items-center justify-content-center justify-content-around">
+                            <h1>Watch
+                            </h1>
+                            <img class="w-25 img-fluid" src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div
+                            class="p-3  border rounded-3 bg-success d-flex align-items-center justify-content-center justify-content-around">
+                            <h1>Bag
+
+                            </h1>
+                            <img class="w-25 img-fluid" src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div
+                            class="p-3  border rounded-3 bg-primary d-flex align-items-center justify-content-center justify-content-around">
+                            <h1>Shoes
+
+
+                            </h1>
+                            <img class="w-25 img-fluid" src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- category1 -->
+        <!-- card -->
+        <section class="container my-5">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer bg-white border-0">
+                            <div class="btn btn-warning">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100  border-0 shadow-lg">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360
+                            </h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer bg-white border-0">
+                            <div class="btn btn-warning">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100  border-0 shadow-lg">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This card has even longer content than the first to show that equal height
+                                action.</p>
+                        </div>
+                        <div class="card-footer bg-white border-0">
+                            <div class="btn btn-warning">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- card -->
+    </main>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
