--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header class="container">
-        <nav class=" navbar navbar-expand-lg navbar-light bg-light">
+        <nav class=" navbar navbar-expand-lg navbar-light fixed-top bg-light">
             <div class="container-fluid">
 
                 <a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt=""></a>
@@ -30,14 +30,14 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoe">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#form">Subscribe</a>
                         </li>
                     </ul>
 
@@ -48,7 +48,7 @@
         <section>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active bg-info border rounded p-5">
+                    <div class="carousel-item active  slide border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center justify-content-center  ">
                                 <div class="container">
@@ -56,7 +56,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$400</h1>
-                                    <div class="btn btn-warning"> Buy Now</div>
+                                    <div class="btn buy-now"> Buy Now</div>
 
                                 </div>
                             </div>
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item  bg-info border rounded p-5">
+                    <div class="carousel-item   border slide rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center justify-content-center  ">
                                 <div class="container">
@@ -74,7 +74,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$1200</h1>
-                                    <div class="btn btn-warning"> Buy Now</div>
+                                    <div class="btn buy-now"> Buy Now</div>
 
                                 </div>
                             </div>
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item  bg-info border rounded p-5">
+                    <div class="carousel-item   border slide rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center justify-content-center  ">
                                 <div class="container">
@@ -92,7 +92,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-warning"> Buy Now</div>
+                                    <div class="btn buy-now"> Buy Now</div>
 
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                 <div class="row g-2">
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <div
-                            class="p-3  border rounded-3 bg-warning d-flex align-items-center justify-content-center justify-content-around">
+                            class="p-3  border rounded-3 buy-now d-flex align-items-center justify-content-center justify-content-around">
                             <h1>Watch
                             </h1>
                             <img class="w-25 img-fluid" src="images/categories/watch.png" alt="">
@@ -156,7 +156,7 @@
         </section>
         <!-- category1 -->
         <!-- card -->
-        <section class="container my-5">
+        <section id="shoe" class="container  my-5">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col ">
@@ -165,12 +165,13 @@
                         <div class="card-body">
                             <h5 class="card-title">Supply 350
                             </h5>
+                            <h2>$160</h2>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional
                                 content. This content is a little bit longer.</p>
                         </div>
                         <div class="card-footer bg-white border-0">
-                            <div class="btn btn-warning">Buy now</div>
+                            <div class="btn buy-now">Buy now</div>
                         </div>
                     </div>
                 </div>
@@ -180,11 +181,12 @@
                         <div class="card-body">
                             <h5 class="card-title">Nike 360
                             </h5>
+                            <h2>$160</h2>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                         </div>
                         <div class="card-footer bg-white border-0">
-                            <div class="btn btn-warning">Buy now</div>
+                            <div class="btn buy-now">Buy now</div>
                         </div>
                     </div>
                 </div>
@@ -194,20 +196,111 @@
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax
                             </h5>
+                            <h2>$160</h2>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional
                                 content. This card has even longer content than the first to show that equal height
                                 action.</p>
                         </div>
                         <div class="card-footer bg-white border-0">
-                            <div class="btn btn-warning">Buy now</div>
+                            <div class="btn buy-now">Buy now</div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- card -->
+
+        <!-- car backpack -->
+        <section id="backpack" class="container my-5">
+            <h2>Backpack</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350
+                            </h5>
+                            <h2>$160</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer bg-white border-0">
+                            <div class="btn buy-now">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100  border-0 shadow-lg">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360
+                            </h5>
+                            <h2>$160</h2>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer bg-white border-0">
+                            <div class="btn buy-now">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100  border-0 shadow-lg">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax
+                            </h5>
+                            <h2>$160</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional
+                                content. This card has even longer content than the first to show that equal height
+                                action.</p>
+                        </div>
+                        <div class="card-footer bg-white border-0">
+                            <div class="btn buy-now">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- card backpack -->
+        <!-- form-box -->
+        <section id="form" style="height: 300px;"
+            class="my-5 container d-flex justify-content-center rounded-3 bg-info align-items-center">
+            <div class="">
+                <h2>LET'S STAY IN TOUCH
+                </h2>
+                <p>Get updates on sales, specials and more
+                </p>
+
+
+                <form>
+
+                    <div class="mb-1">
+
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+                    </div>
+
+
+                    <button type="submit" class="btn buy-now">Submit</button>
+                </form>
+
+            </div>
+
+
+        </section>
+        <!-- form-box -->
     </main>
+    <footer>
+        <p class="text-center">
+            ©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.
+        </p>
+    </footer>
 
 
 
