--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
@@ -50,8 +50,8 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active  slide border rounded p-5">
                         <div class="row">
-                            <div class="col-lg-7 d-flex align-items-center justify-content-center  ">
-                                <div class="container">
+                            <div class="col-lg-7 d-flex pt-5 align-items-center justify-content-center  ">
+                                <div class=" container">
                                     <h1>Cool Dude Headphone</h1>
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="carousel-item   border slide rounded p-5">
                         <div class="row">
-                            <div class="col-lg-7 d-flex align-items-center justify-content-center  ">
+                            <div class="col-lg-7 d-flex pt-5 align-items-center justify-content-center  ">
                                 <div class="container">
                                     <h1>Mega LCD TV For Sports
                                     </h1>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="carousel-item   border slide rounded p-5">
                         <div class="row">
-                            <div class="col-lg-7 d-flex align-items-center justify-content-center  ">
+                            <div class="col-lg-7 d-flex pt-5 align-items-center justify-content-center  ">
                                 <div class="container">
                                     <h1>X-Box for your living room
                                     </h1>
